add few more commands to read me and also update Test to include javax activation package to illustrate add module option in java 9.