@@ -13,3 +13,7 @@ jlink --module-path .;%JAVA_HOME%\jmods --add-modules com.main --output main --b
 C:\Shrikant\DEVELOPMENT\JAVA\PROJECT\Java9\understanding_module_transitive\main\bin\java.exe --list-modules
 
 java.exe --list-modules
+
+javac --module-path %JAVA_HOME%\jmods --add-modules java.activation Test.java
+
+java --module-path C:\JAVA_INSTALLATION\jdk-9.0.1_64\jmods --add-modules java.activation Test
